[package]
name = "qtree"
version = "0.1.0"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]
edition = "2018"

[features]
default = []

[dependencies]
nalgebra = "0.17"
snowflake = "1.3"
failure = "0.1"
rand = "0.6"
ggez = {version = "0.4", optional = true}

[dev-dependencies]
qtree = {path = ".", features = ["ggez"]}
env_logger = "0.6"
log = "0.4"
ggez = "0.4"
