[package]
name = "qtree"
description = "A bounding box quad tree implementation that works with ggez"
version = "0.1.0"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]
repository = "https://github.com/drozdziak1/qtree"
readme = "README.md"
keywords = ["indexing", "ggez", "quad-tree"]
categories = ["algorithms", "data-structures"]
license = "MIT"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["ggez"]

[dependencies]
nalgebra = "0.17"
snowflake = "1.3"
failure = "0.1"
rand = "0.6"
ggez = {version = "0.4", optional = true}

[dev-dependencies]
env_logger = "0.6"
log = "0.4"
ggez = "0.4"
